fix: fix an issue with drop details modal on small screens

--- a/src/components/detail_page/DropDetail/DropDetail.css
+++ b/src/components/detail_page/DropDetail/DropDetail.css
@@ -365,7 +365,7 @@
 }
 
 .detail-view-container {
-  max-width: 540px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 32px;
